syntax = "proto3";
package spire.plugin.types;
option go_package = "github.com/spiffe/spire-plugin-sdk/proto/spire/plugin/types";

import "spire/plugin/types/jwtkey.proto";
import "spire/plugin/types/x509certificate.proto";

message Bundle {
    // The name of the trust domain the bundle belongs to (e.g., "example.org").
    string trust_domain = 1;

    // X.509 authorities for authenticating X509-SVIDs.
    repeated X509Certificate x509_authorities = 2;

    // JWT authorities for authenticating JWT-SVIDs.
    repeated JWTKey jwt_authorities = 3;

    // A hint on how often the bundle should be refreshed from the bundle
    // provider, in seconds. Can be zero (meaning no hint available).
    int64 refresh_hint = 4;

    // The sequence number of the bundle.
    uint64 sequence_number = 5;
}
