syntax = "proto3";
package spire.plugin.types;
option go_package = "github.com/spiffe/spire-plugin-sdk/proto/spire/plugin/types";

message JWTKey {
    enum Status {
        // RESTRICT prevents the bundle from being deleted in the presence of associated entries
        ACTIVE = 0;
        // DELETE deletes the bundle and associated entries
        TAINTED = 1;
        // DISSOCIATE deletes the bundle and dissociates associated entries
        REVOKED = 2;
    }

    // The PKIX encoded public key.
    bytes public_key = 1;

    // The key identifier.
    string key_id = 2;

    // When the key expires (seconds since Unix epoch). If zero, the key does
    // not expire.
    int64 expires_at = 3;

    // The key status
    Status status = 4;
}
